_mocha_test/test_20260807/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  chart
  namespace: app
  labels:
    app:  chart
spec:
  selector:
    matchLabels:
      app: chart
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  chart
    spec:
      containers:
      - name:  chart
        image: 851725327555.dkr.ecr.us-east-1.amazonaws.com/charts:v1 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2
            memory: 2048Mi
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:3000/ || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:3000/ || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: chart
        #       key: DB_HOST
        # - name: DB_PASS
        #   valueFrom:
        #     secretKeyRef:
        #       name: chart
        #       key: DB_PASS
        ports:
        - containerPort: 3000
          name:  chart
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
