_mocha_test/test_20260807/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chart-svc
  namespace: app
spec:
  selector:
    app: chart
  type: ClusterIP
  ports:
  - name: chart
    protocol: TCP
    port: 3000
    targetPort: 3000
