_mocha_test/test_20260807/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chart-ing
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: hallyudb-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: chart-svc
            port:
              number: 3000
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: response-403
      #       port:
      #         name: use-annotation
